crates/snapshot-tests/tests/snapshots/parser__datetimes__utc_invalid.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidDateTime]: invalid datetime: expected 2-digit month at `utc`
  ┌─ utc_invalid:1:7
  │
1 │ utc = 2016-9-09T09:09:09Z
  │       ^^^^^^^^^^^^^^^^^^^ invalid datetime: expected 2-digit month


error: invalid datetime: expected 2-digit month at `utc`
 --> utc_invalid:1:7
  |
1 | utc = 2016-9-09T09:09:09Z
  |       ^^^^^^^^^^^^^^^^^^^ invalid datetime: expected 2-digit month
Error {
    kind: "InvalidDateTime",
    message: "invalid datetime: expected 2-digit month",
    span: 6..25,
    path: Some(
        "utc",
    ),
}
